<?xml version="1.0"?>
<package>
	<name>husky_custom_description</name>
	<version>0.0.0</version>
	<description>Customizations for the BIR03 Husky</description>
	<maintainer email="code@clearpathrobotics.com">Clearpath Team</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>husky_bringup</run_depend>
	<run_depend>husky_description</run_depend>
	
</package>
